# disco-rs

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: key.rs  lib.rs  tagged.rs
example/src/key/: soft.rs
example/src/key/soft/: k256.rs  p256.rs  x25519.rs
example/tests/: key.rs  params.rs  session.rs  strobe.rs
example/tests/inner/: mod.rs
src/: builder.rs  channel.rs  error.rs  handshake.rs  key.rs  lib.rs  nonce.rs  params.rs  prologue.rs  session.rs  tag.rs  transport.rs
tests/: keys.rs  one_way.rs  params.rs  strobe.rs  two_way.rs
tests/common/: mod.rs
tests/xeddsa/: mod.rs
