[package]
name = "disco-rs"
version = "0.5.0"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A no-std, pure Rust impl of Disco Noise Protocol extension"
documentation = "https://docs.rs/disco-rs"
repository = "https://github.com/cryptidtech/disco-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["cryptography", "no-std", "noise", "strobe", "disco"]
categories = ["cryptography", "no-std"]
rust-version = "1.58.1"

[features]
alloc = [
    "cde/alloc",
    "rand/alloc",
]
default = [
    "std"
]
preselect = [
    "cde/default",
    "rand/getrandom",
    "rand_xorshift",
]
std = [
    "cde/std",
    "rand/std",
    "rand/std_rng",
]
no-std = [
    "cde/no-std",
    "rand_xorshift",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
cde = { version = "0.3", default-features = false }
rand_core = "0.6"
rand_core5 = { version = "0.5", package = "rand_core" }
rand = { version = "0.8", default-features = false, optional = true }
rand_xorshift = { version = "0.3", optional = true }
rand_chacha = "0.3"
semver = { version = "1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-big-array = { version = "0.4.1", default-features = false }
strobe-rs = { version = "0.7", default-features = false, features = ["serialize_secret_state"] }
thiserror = { version = "1.0", default-features = false }
zeroize = "1.4"

[dev-dependencies]
cde = { version = "0.3" }
elliptic-curve = { version = "0.10", features = ["ecdh"] }
rand = "0.8"
rand7 = { version = "0.7", package = "rand" }
rand_xorshift = "0.3"
serde_cbor = "0.11.2"
x25519-dalek = { version = "1.1" }
