[package]
name = "disco-ecdh-example"
version = "0.1.1"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A no-std, pure Rust impl of Disco Noise Protocol extension"
documentation = "https://docs.rs/disco-rs"
repository = "https://github.com/cryptidtech/disco-rs"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
keywords = ["cryptography", "no-std", "noise", "strobe", "disco"]
categories = ["cryptography", "no-std"]
rust-version = "1.58.1"

[features]
alloc = [
    "cde/alloc",
    "curve25519-dalek/alloc",
    "disco-rs/alloc",
    "ed25519-dalek/alloc",
    "elliptic-curve/alloc",
    "k256",
    "p256",
    "rand/alloc",
    "x25519-dalek"
]
default = [
    "std"
]
preselect = [
    "cde/default",
    "curve25519-dalek/default",
    "disco-rs/preselect",
    "ed25519-dalek/default",
    "elliptic-curve/default",
    "heapless",
    "k256/default",
    "p256/default",
    "rand/getrandom",
    "rand_xorshift",
    "x25519-dalek/default",
]
std = [
    "cde/std",
    "curve25519-dalek/default",
    "disco-rs/std",
    "ed25519-dalek/default",
    "elliptic-curve/default",
    "k256/default",
    "p256/default",
    "rand/std",
    "x25519-dalek/default",
]
no-std = [
    "cde/no-std",
    "curve25519-dalek",
    "disco-rs/no-std",
    "elliptic-curve",
    "heapless",
    "k256",
    "p256",
    "rand_xorshift",
    "x25519-dalek",
]

[dependencies]
cde = { version = "0.3.1", default-features = false }
crypto-bigint = "0.2"
curve25519-dalek = { version = "4.0.0-pre.1", default-features = false, optional = true }
disco-rs = { version = "0.1", path = "../", default-features = false }
ed25519-dalek = { version = "1.0", default-features = false, optional = true }
elliptic-curve = { version = "0.10", features = ["ecdh"], optional = true }
heapless = { version = "0.7", optional = true }
k256 = { version = "0.9", features = ["ecdh", "ecdsa"], default-features = false, optional = true }
p256 = { version = "0.9", features = ["ecdh", "ecdsa"], default-features = false, optional = true }
rand_core = "0.6"
rand_core5 = { version = "0.5", package = "rand_core" }
rand = { version = "0.8", default-features = false, optional = true }
rand_xorshift = { version = "0.3", optional = true }
rand_chacha = "0.3"
semver = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
strobe-rs = { version = "0.7", default-features = false, features = ["serde"] }
x25519-dalek = { version = "1.1", default-features = false, optional = true }
zeroize = "1.4"

[dev-dependencies]
rand = "0.8"
rand7 = { version = "0.7", package = "rand" }
rand_xorshift = "0.3"
serde_bare = "0.5"
